# org-GUI

./: .gitignore  README.md  latest-experimental.json  latest.json
.github/workflows/: release.yml
TauriApp/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
TauriApp/samples/: demo.org
TauriApp/src/: App.tsx  main.tsx  vite-env.d.ts
TauriApp/src-tauri/: Cargo.toml  tauri.conf.json
TauriApp/src-tauri/capabilities/: default.json
TauriApp/src-tauri/icons/: icon.icns
TauriApp/src-tauri/resources/: org-gui-bridge.el
TauriApp/src-tauri/scripts/: install-prereqs-linux.sh  install-prereqs-macos.sh
TauriApp/src-tauri/src/: lib.rs  main.rs
TauriApp/src/api/: demoData.json  demoData.ts  org.ts
TauriApp/src/components/: AboutModal.tsx  AgendaPanel.tsx  BlockEditor.tsx  BoxNode.tsx  CalendarView.tsx  ConfirmModal.tsx  ContextMenu.tsx  DependencyEdge.tsx  DetailPanel.tsx  EmacsTerminal.tsx  ErrorBoundary.tsx  ErrorToast.tsx  FileEditor.tsx  GcalPanel.tsx  OnHoldPanel.tsx  OrgNode.tsx  PrereqsModal.tsx  SelectionBar.tsx  TabBar.tsx  TableEditor.tsx  TagAura.tsx  TagHulls.tsx  TagsPopover.tsx  TimelineBand.tsx  TimelineGanttView.tsx  TimelineGraph.tsx  TodayPanel.tsx  Toolbar.tsx  TreeEdge.tsx
TauriApp/src/config/: google.ts
TauriApp/src/store/: useOrgStore.ts
TauriApp/src/styles/: globals.css
TauriApp/src/utils/: editorActivity.ts  layout.ts  orgEditing.ts  orgTable.ts  scheduleItems.ts  tagColor.ts  time.ts
