[package]
name = "app"
version = "0.2.12"
description = "org-GUI — a visual GUI wrapper around Emacs org-mode"
authors = ["Zhuojian Look"]
license = "MIT"
repository = "https://github.com/zhuojianlook/org-GUI"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
url = "2"
portable-pty = "0.8"
base64 = "0.22"
